--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "frontend/dist",
+  "installCommand": "npm install && cd frontend && npm install && cd ../api && npm install",
   "rewrites": [
     {
       "source": "/api/(.*)",
