--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "@supabase/supabase-js": "^2.39.0",
     "react-hook-form": "^7.49.2",
-    "axios": "^1.6.2"
+    "react-router-dom": "^6.21.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
