--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "@supabase/supabase-js": "^2.39.0",
     "@vercel/node": "^3.0.7",
     "pdfkit": "^0.14.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
